feat: complete US5 result inspection
